Updated app.css and fixed navbar spacing

--- a/client/src/components/common/navbar/Navbar.css
+++ b/client/src/components/common/navbar/Navbar.css
@@ -23,6 +23,7 @@
 .upper-navbar {
     display: flex;
     width: 100%;
+    margin: 2vh 0;
 }
 
 .logo-container {
@@ -59,14 +60,21 @@
 .lower-navbar a {
     flex-basis: 20%;
     width: 100%;
-    border-right: 1px solid #3d9e98;
+    /* border-right: 1px solid #3d9e98; */
+    padding: 1vh 0;
 }
-
 
 .lower-navbar a:hover {
     color: #292f36;
 }
 
-.lower-navbar a:last-of-type {
-    border: none;
-}
+.lower-navbar:nth-of-type(1n+1) a:after {
+    content: "";
+    background-color: #3d9e98;
+    position: relative;
+    bottom: 100%;
+    left: 0;
+    height: 100%;
+    width: 1px;
+    display: block;
+  }
